returns a custom collection of symbols